mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_match_optional_guard.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Non-exhaustive match: missing pattern for Optional: some
--> test_scripts/error_cases/semantic_match_optional_guard.mux:4:11
   |
 4 |     match x {
   |           ^
   |
= help: Add match arm for: some, or add a wildcard '_' pattern
